[emacs] Ensure tangle creates functions
I assumed that the `:mkdirp yes` functionality was the default. It
wasn't so this fix makes sure a new environment works out-of-the-box.

--- a/tag-emacs/config/doom/config.org
+++ b/tag-emacs/config/doom/config.org
@@ -141,7 +141,7 @@ Hoo boy, Org mode. This is the make-or-break feature for Emacs for many people. 
 
 All helper functions live in ~autoload/mjh-org.el~, which I initialize with a preamble here:
 
-#+begin_src elisp :tangle autoload/mjh-org.el
+#+begin_src elisp :tangle autoload/mjh-org.el :mkdirp yes
 ;;; autoload/mjh-org.el  -*- lexical-binding: t; -*-
 #+end_src
 
