--- a/tag-emacs/config/doom/config.org
+++ b/tag-emacs/config/doom/config.org
@@ -33,7 +33,7 @@ This file /must/ exist in the same place on every computer on which I use Emacs.
 (setq +literate-config-file "~/code/dotfiles/tag-emacs/config/doom/config.org")
 #+end_src
 
-** TODO File a bug with Doom about this
+** TODO File a bug with Doom about this :@computer:
 <2021-01-10 Sun>
 
 I can't imagine this is intentional and it feels like a bug.
@@ -85,14 +85,14 @@ Since I am an ex-Vim user, I prefer to use Vim motions for moving around files. 
 (setq display-line-numbers-type 'relative)
 #+end_src
 
-** TODO Add the ability to toggle to a light theme
+** TODO Add the ability to toggle to a light theme :@computer:
 :PROPERTIES:
 :CREATED: <2021-01-09 Sat>
 :END:
 
 When I'm in daylight, I switch to ~apropospriate-light~. In [[https://spacemacs.org][Spacemacs]], they have a nice [[https://github.com/syl20bnr/spacemacs/blob/82ba73a1c0fdf055e9c062beb5ba669c52a19e7f/core/core-themes-support.el#L399-L415][function for cycling themes]] that you configure, but Doom doesn't have the same sort of functionality.
 
-** TODO Consider adding a ~fontconfig~ tangle here
+** TODO Consider adding a ~fontconfig~ tangle here :@computer:
 :PROPERTIES:
 :CREATED: <2021-01-09 Sat>
 :END:
@@ -137,7 +137,7 @@ Instead of relying on the heavyweight ~flyspell~, I am trying out ~spell-fu~, wh
 (setq ispell-dictionary "en")
 #+end_src
 
-** TODO Consider submitting a patch to Doom to infer your dictionary when unset
+** TODO Consider submitting a patch to Doom to infer your dictionary when unset :@computer:
 :PROPERTIES:
 :CREATED:  <2021-01-09 Sat>
 :END:
@@ -245,7 +245,7 @@ When showing tasks for the day, I want to make sure I'm including notes from my 
 
 #+begin_src elisp
 (defun +mjh-org-init-agenda-h ()
-  (setq org-agenda-files (list "~/org/" "~/org/roam/daily/")))
+  (setq org-agenda-files (list "~/org/" "~/org/roam/daily/" "~/.config/doom/config.org")))
 
 (advice-add '+org-init-agenda-h :after #'+mjh-org-init-agenda-h)
 #+end_src
