[emacs] Fix typo in evil-join advice
I swapped some characters and didn't realize that an error was happening
until I restarted Emacs manually.

--- a/tag-emacs/config/doom/config.org
+++ b/tag-emacs/config/doom/config.org
@@ -121,7 +121,7 @@ I used ~vim-surround~ for years when I was in Vim but never internalized how it 
 Doom tries to be helpful by autofilling paragraphs of comments using ~fill-region-as-paragraph~. This means that if your line will wrap at the fill column, the join does not happen as expected. This behavior is more irritating than the joining of comments for me. As such, I am disabling this functionality until I can come back to it.
 
 #+begin_src elisp
-(advice-remove 'evil-join #+'evil-join-a)
+(advice-remove 'evil-join #'+evil-join-a)
 #+end_src
 
 ** TODO File a bug about ~+evil-join-a~ :@computer:
