--- a/tag-emacs/config/doom/config.org
+++ b/tag-emacs/config/doom/config.org
@@ -65,6 +65,20 @@ This theme is not included by default in Doom, so I need to install it like so:
 (package! apropospriate-theme)
 #+end_src
 
+When I'm in daylight, I switch to ~apropospriate-light~. That is easily done through a toggle between the two themes that I use:
+
+#+begin_src elisp
+(defun mjh-toggle-theme ()
+  (interactive)
+  (if (eq doom-theme 'apropospriate-dark)
+      (load-theme 'apropospriate-light)
+    (load-theme 'apropospriate-dark)))
+
+(map! :leader
+      (:prefix ("t" . "toggle")
+       :desc "Toggle theme" "t" #'mjh-toggle-theme))
+#+end_src
+
 On my Linux machines, I have been trying to fight with ~fontconfig~ to ensure that it aliases my [[https://github.com/ryanoasis/nerd-fonts/tree/master/patched-fonts/FiraCode][Nerd Font version of Fira Code]] as Fira Code to match my macOS machine. That is proving frustrating, so I am instead toggling the family based on whether the host runs Linux.
 
 Because my different computers have monitors at different resolution, I decided to switch on ~system-name~ to decide what font size I use.
@@ -93,13 +107,6 @@ Since I am an ex-Vim user, I prefer to use Vim motions for moving around files. 
 #+begin_src elisp
 (setq display-line-numbers-type 'relative)
 #+end_src
-
-** TODO Add the ability to toggle to a light theme :@computer:
-:PROPERTIES:
-:CREATED: <2021-01-09 Sat>
-:END:
-
-When I'm in daylight, I switch to ~apropospriate-light~. In [[https://spacemacs.org][Spacemacs]], they have a nice [[https://github.com/syl20bnr/spacemacs/blob/82ba73a1c0fdf055e9c062beb5ba669c52a19e7f/core/core-themes-support.el#L399-L415][function for cycling themes]] that you configure, but Doom doesn't have the same sort of functionality.
 
 ** Mixed pitch
 
