--- a/tag-emacs/config/doom/config.org
+++ b/tag-emacs/config/doom/config.org
@@ -471,6 +471,21 @@ The automatic pairing for smartparens' =`= pair gets applied within Org mode whe
   (sp-local-pair 'org-mode "'" nil :actions :rem))
 #+end_src
 
+* Using Emacs to edit textboxes in the browser
+
+#+begin_src elisp :tangle packages.el
+(package! atomic-chrome)
+#+end_src
+
+#+begin_src elisp
+(use-package! atomic-chrome
+  :after-call focus-out-hook
+  :config
+  (setq atomic-chrome-buffer-open-style 'frame
+        atomic-chrome-default-major-mode 'markdown-mode)
+  (atomic-chrome-start-server))
+#+end_src
+
 * Wakatime
 
 I like to track my time on different projects using the Wakatime service. To do so, it's easiest to use its global mode, so I enable that here:
