[emacs] Fix org-journal date expectations
I didn't realize there were two settings that you had to take care of to
make org-journal be able to find things. This makes it so the timestamps
match between the properties and headlines.

--- a/tag-emacs/config/doom/config.org
+++ b/tag-emacs/config/doom/config.org
@@ -425,7 +425,8 @@ I switched to using ~org-journal~ for my journal-like activities from ~org-roam~
 
 #+begin_src elisp
 (after! org-journal
-  (setq org-journal-date-format "%Y-%m-%d (%A)"
+  (setq org-journal-created-property-timestamp-format "%Y-%m-%d"
+        org-journal-date-format "%Y-%m-%d (%A)"
         org-journal-enable-agenda-integration t
         org-journal-file-format "%Y-%m.org"
         org-journal-file-type 'monthly
